# PZ

./: ADR-001-language-choice  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Karta Zadań Zespołu  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  Threat Model  test  test.vl
.github/workflows/: ci.yml
docs/: ADR-002-body-format.md  ADR-003-aead-choice.md  ADR-004-kdf-params.md  ADR-005-error-handling.md  ADR-006-secret-input.md  ADR-007-clipboard.md  ARCHITECTURE.md  SPEC.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: body_parser.rs  header_parser.rs
src/: cli.rs  clip.rs  crypto.rs  error.rs  format.rs  lib.rs  main.rs  prompt.rs  record.rs  service.rs  storage.rs  view.rs
tests/: adversarial_tests.rs  integration_tests.rs  regressions.rs
tests/adversarial/: adversarial_tests.rs
tests/integration/: integration_tests.rs
testvectors/: v1.json
